# markov-code-of-points

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  Procfile  cop.txt  copCombined.txt  copCombined.txt.bak  copenglish.txt  copmanual.txt  docker-compose.yaml  docker-compose.yml  englishify.py  entrypoint.sh  markov.py  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: deploy.yml
markov-code-of-points-cdk/: cdk.json  package-lock.json  package.json
markov-code-of-points-cdk/lib/: markov-code-of-points-cdk-stack.ts
markov-code-of-points-cdk/test/: markov-code-of-points-cdk.test.ts
src/: copCombined.txt  index.py  pyproject.toml
