[tool.poetry]
name = "code-of-points-markov-twitter"
version = "0.1.0"
description = ""
authors = ["lukewiwa <luke.wiwa@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.6"
markovify = "^0.8.3"
twitter = "^1.18.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.790"
isort = "^5.7.0"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
